@@ -138,6 +138,24 @@ name|IndexSchemaTest
 extends|extends
 name|SolrTestCaseJ4
 block|{
+DECL|field|solrConfigFileName
+specifier|final
+specifier|private
+specifier|static
+name|String
+name|solrConfigFileName
+init|=
+literal|"solrconfig.xml"
+decl_stmt|;
+DECL|field|schemaFileName
+specifier|final
+specifier|private
+specifier|static
+name|String
+name|schemaFileName
+init|=
+literal|"schema.xml"
+decl_stmt|;
 annotation|@
 name|BeforeClass
 DECL|method|beforeClass
@@ -151,9 +169,9 @@ name|Exception
 block|{
 name|initCore
 argument_list|(
-literal|"solrconfig.xml"
+name|solrConfigFileName
 argument_list|,
-literal|"schema.xml"
+name|schemaFileName
 argument_list|)
 expr_stmt|;
 block|}
