@@ -191,6 +191,42 @@ name|SolrIndexConfigTest
 extends|extends
 name|SolrTestCaseJ4
 block|{
+DECL|field|solrConfigFileName
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|solrConfigFileName
+init|=
+literal|"solrconfig.xml"
+decl_stmt|;
+DECL|field|solrConfigFileNameWarmer
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|solrConfigFileNameWarmer
+init|=
+literal|"solrconfig-warmer.xml"
+decl_stmt|;
+DECL|field|solrConfigFileNameTieredMergePolicy
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|solrConfigFileNameTieredMergePolicy
+init|=
+literal|"solrconfig-tieredmergepolicy.xml"
+decl_stmt|;
+DECL|field|schemaFileName
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|schemaFileName
+init|=
+literal|"schema.xml"
+decl_stmt|;
 annotation|@
 name|BeforeClass
 DECL|method|beforeClass
@@ -204,9 +240,9 @@ name|Exception
 block|{
 name|initCore
 argument_list|(
-literal|"solrconfig.xml"
+name|solrConfigFileName
 argument_list|,
-literal|"schema.xml"
+name|schemaFileName
 argument_list|)
 expr_stmt|;
 block|}
@@ -223,22 +259,6 @@ name|resolve
 argument_list|(
 literal|"collection1"
 argument_list|)
-decl_stmt|;
-DECL|field|solrConfigFileNameWarmer
-specifier|private
-specifier|final
-name|String
-name|solrConfigFileNameWarmer
-init|=
-literal|"solrconfig-warmer.xml"
-decl_stmt|;
-DECL|field|solrConfigFileNameTieredMergePolicy
-specifier|private
-specifier|final
-name|String
-name|solrConfigFileNameTieredMergePolicy
-init|=
-literal|"solrconfig-tieredmergepolicy.xml"
 decl_stmt|;
 annotation|@
 name|Test
@@ -279,7 +299,7 @@ name|IndexSchemaFactory
 operator|.
 name|buildIndexSchema
 argument_list|(
-literal|"schema.xml"
+name|schemaFileName
 argument_list|,
 name|solrConfig
 argument_list|)
@@ -367,7 +387,7 @@ name|IndexSchemaFactory
 operator|.
 name|buildIndexSchema
 argument_list|(
-literal|"schema.xml"
+name|schemaFileName
 argument_list|,
 name|solrConfig
 argument_list|)
@@ -582,7 +602,7 @@ name|IndexSchemaFactory
 operator|.
 name|buildIndexSchema
 argument_list|(
-literal|"schema.xml"
+name|schemaFileName
 argument_list|,
 name|solrConfig
 argument_list|)
